<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etAdminID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/admin_user_name"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etAdminPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/admin_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnAdminLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="AdminLogin"
        android:text="@string/admin_login" />

</LinearLayout>